# researcher

./: .gitignore  .mcp.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  PRIVACY.md  README.md  SECURITY.md  TODO.md  pytest.ini
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: code-agent.md  discovery-agent.md  formatting-agent.md  research-agent.md  review-agent.md  statistics-agent.md  style-agent.md  visualization-agent.md  writing-agent.md
commands/: brainstorm.md  design-experiment.md  draft-section.md  fact-check.md  find-conference.md  find-journal.md  new-manuscript.md  research-pipeline.md  review-paper.md  revise.md  sota.md  submit-ready.md  systematic-review.md  verify-citations.md  watch-topic.md
connectors/: arxiv.md  crossref.md  datacite.md  google-scholar.md  mendeley.md  openalex.md  opencitations.md  pubmed.md  scite.md  semantic-scholar.md  unpaywall.md  zotero.md
core/: CALIBRATION.md  README.md  pyproject.toml
core/researcher_core/: __init__.py  __main__.py  bib.py  cache.py  cli.py  config.py  dedupe.py  export.py  faithfulness.py  fulltext.py  graph.py  lineage.py  mcp_server.py  model.py  monitor.py  passages.py  protocol.py  provenance.py  rank.py  sanitize.py  screen.py  search.py  snapshots.py  sr_prisma.py  status.py  verify.py
core/researcher_core/connectors/: __init__.py  arxiv.py  base.py  crossref.py  datacite.py  openalex.py  opencitations.py  pubmed.py  semantic_scholar.py  unpaywall.py
core/researcher_core/lineage/: __init__.py  compile.py  graph.py  index.py  model.py  passport.py
core/schemas/: claim-node.schema.json  evidence-edge.schema.json  experiment-manifest.schema.json  faithfulness-report.schema.json  passage.schema.json  provenance-event.schema.json  record.schema.json  snapshot.schema.json  status-report.schema.json  verification-report.schema.json
core/tests/: conftest.py  test_bib.py  test_cache.py  test_cache_noexport.py  test_cli.py  test_cli_systematic_review.py  test_compile_fixture.py  test_config.py  test_connector_arxiv.py  test_connector_crossref.py  test_connector_datacite.py  test_connector_openalex.py  test_connector_opencitations.py  test_connector_pubmed.py  test_connector_query_sanitization.py  test_connector_semantic_scholar.py  test_connector_unpaywall.py  test_dedupe.py  test_export.py  test_faithfulness.py  test_fulltext.py  test_graph.py  test_lineage.py  test_lineage_compile.py  test_lineage_model.py  test_lineage_passport.py  test_mcp_server.py  test_model.py  test_monitor.py  test_passages.py  test_protocol.py  test_provenance.py  test_rank.py  test_sanitize.py  test_screen.py  test_search.py  test_snapshots.py  test_sr_prisma.py  test_status.py  test_verify.py
core/tests/fixtures/: torture.bib
core/tests/snapshots/verify-gold/: calibrate.py  cases.json  record.py  status-cases.json
docs/: astro.config.mjs  (+2 more)
(+183 files in other folders)
