[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "researcher-core"
version = "1.0.0"
description = "Deterministic multi-source literature retrieval and per-axis citation verification for the Researcher plugin."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Researcher contributors" }]
keywords = [
    "research",
    "citations",
    "bibliography",
    "openalex",
    "crossref",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Base runtime dependencies. Nothing else is required to run the CLI.
# jsonschema is deliberately NOT here: schema validation is a test-time concern.
dependencies = [
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "platformdirs>=4.2",
]

[project.scripts]
researcher-core = "researcher_core.cli:main"
researcher-mcp = "researcher_core.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.22",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]
fulltext = [
    "pymupdf>=1.24",
    "selectolax>=0.3.21",
]
rerank = [
    "rank-bm25>=0.2.2",
]
# The thin stable-core MCP server (M5.9). Optional so the base runtime stays minimal;
# `researcher-mcp` exits with an install hint when this extra is not present.
mcp = [
    "fastmcp>=2.0",
]

[project.urls]
Homepage = "https://github.com/sokolmarek/researcher"
Repository = "https://github.com/sokolmarek/researcher"

# Mirrors [project.optional-dependencies].dev so that a plain `uv sync --project core`
# provisions the test and lint toolchain. Contributors without uv get the same set from
# `pip install -e "core[dev]"`. Keep the two lists in sync.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.22",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
    "pyyaml>=6.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["researcher_core"]

[tool.hatch.build.targets.sdist]
include = [
    "researcher_core",
    "schemas",
    "README.md",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q -m 'not live'"
markers = [
    "live: hits live APIs over the network; opt-in only, deselected by default",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.10"
packages = ["researcher_core"]
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
